--- a/tweetme-web/public/index.html
+++ b/tweetme-web/public/index.html
@@ -30,7 +30,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="tweetme" data-username="slavyana" data-can-tweet="false"></div>
+{#    The form can be rendered separately, anything can be rendered separately#}
+{#     <div id="tweetme-tweet-form"></div> #}
+    <div id="tweetme" data-username="slavyana" data-can-tweet="true"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
