--- a/tweetme-web/public/index.html
+++ b/tweetme-web/public/index.html
@@ -29,9 +29,10 @@
     <title>Tweetme App</title>
   </head>
   <body>
+<!--      The form can be rendered separately, anything can be rendered separately
+  <div id="tweetme-tweet-form"></div>  -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
-{#    The form can be rendered separately, anything can be rendered separately#}
-{#     <div id="tweetme-tweet-form"></div> #}
+
     <div id="tweetme" data-username="slavyana" data-can-tweet="true"></div>
     <!--
       This HTML file is a template.
