--- a/tweetme-web/public/index.html
+++ b/tweetme-web/public/index.html
@@ -34,8 +34,9 @@
   <div id="tweetme-tweet-form"></div>  -->
 <noscript>You need to enable JavaScript to run this app.</noscript>
 
-<div id="tweet-container"></div>
-<div id="tweetme" data-username="slavyana" data-can-tweet="true"></div>
+<div id="tweetme-feed"></div>
+<div class="d-none" id="tweet-container"></div>
+<div class="d-none" id="tweetme" data-username="slavyana" data-can-tweet="true"></div>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
