Added follow/unfollow button

--- a/tweetme-web/public/index.html
+++ b/tweetme-web/public/index.html
@@ -36,7 +36,7 @@
 
 <div class="d-none" id="tweetme-feed"></div>
 <div class="d-none" id="tweet-container"></div>
-<div class="tweetme-profile-badge" data-username="slavyana"></div>
+<div class="tweetme-profile-badge" data-username="HelloWorld"></div>
 <div class="d-none" id="tweetme" data-username="slavyana" data-can-tweet="true"></div>
 <!--
   This HTML file is a template.
