--- a/tweetme-web/public/index.html
+++ b/tweetme-web/public/index.html
@@ -34,9 +34,9 @@
   <div id="tweetme-tweet-form"></div>  -->
 <noscript>You need to enable JavaScript to run this app.</noscript>
 
-<div class="d-none" id="tweetme-feed"></div>
+<div class="" id="tweetme-feed"></div>
 <div class="d-none" id="tweet-container"></div>
-<div class="tweetme-profile-badge" data-username="HelloWorld"></div>
+<div class="tweetme-profile-badge" data-username="slavyana"></div>
 <div class="d-none" id="tweetme" data-username="slavyana" data-can-tweet="true"></div>
 <!--
   This HTML file is a template.
