--- a/tweetme-web/public/index.html
+++ b/tweetme-web/public/index.html
@@ -51,7 +51,7 @@
 
 <script>
     var path = window.location.pathname;
-    var idRegex = /(?<tweetid>\d+)/;
+    var idRegex = /\/(?<tweetid>\d+)/;
     var match = path.match(idRegex);
     if (match) {
         var tweetId = match.groups.tweetid;
